# musiforge

./: .gitignore  Cargo.toml  README.md
doc/: expectation.md  model.md  overtone.md
src/: block.rs  effects.rs  graph_flow.rs  key.rs  lib.rs  main.rs  musiblock.rs  ui.rs
