[package]
name = "musiforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "*"
anyhow = "*"
log = "*"
env_logger = "*"

eframe = "*"
egui = "*"
winapi = { version = "0.3", features = ["winuser", "windef"] }
