[package]
name = "musiforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
midir = "0.10"

anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
# tokio = { version = "1", features = ["full"] }

eframe = "0.29"
egui = "0.29"
winapi = { version = "0.3", features = ["winuser", "windef"] }
